home section is done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +9,37 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- fontawesome cdn link -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <title>Minimal</title>
-  
+
 </head>
+
 <body>
   <div class="wrapper">
     <header>Gulhayo sister</header>
     <main>
-      <section class="main">Shomurod</section>
-      <section class="about">Shomurod</section>
+
+      <!-- main section start -->
+      <section class="main">
+        <div class="box">
+          <h1>Making brands stand out <br>is our obsession</h1>
+          <img src="./Rectangle.png" alt="">
+          <p>Let us help your brand stand out.</p>
+        </div>
+      </section>
+      <!-- main section end -->
+
+      <section class="about">
+        <div class="box2">
+          <h1>Minimalist is a full-service digital creative agency located in Ontorio Canada. We focus on design,
+            consulting, technology, and photography. <br> Weve been building unique digital products, platforms, and
+            experiences for the past <br>6 years. Let us help your company grow.</h1>
+          <button>Get in Touch</button>
+        </div>
+      </section>
       <section class="brands">Odina sister</section>
       <section class="projects">Suhrobbek</section>
       <section class="team">Odina sister</section>
@@ -28,4 +49,5 @@
     <footer>Gulhayot sister</footer>
   </div>
 </body>
+
 </html>
