--- a/index.html
+++ b/index.html
@@ -19,9 +19,61 @@
     <main>
       <section class="main">Shomurod</section>
       <section class="about">Shomurod</section>
-      <section class="brands">Odina sister</section>
+      <section class="brands">
+        <div class="make">
+          <h1>HOW WE MAKE BRANDS THRIVE</h1>
+          
+        </div>
+        <nav class="frame">
+          <div class="target">
+            <img src="./Frame (1).png" alt="">
+            <h1>Set a Target</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore eum dolorum natus deserunt magni dicta.</p>
+          </div>
+          <div class="design">
+            <img src="./Frame (1).png" alt="">
+            <h1>Design a solution</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore eum dolorum natus deserunt magni dicta.</p>
+          </div>
+          <div class="track">
+            <img src="./Frame (1).png" alt="">
+            <h1>Track the progress</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore eum dolorum natus deserunt magni dicta.</p>
+          </div>
+        </nav>
+      </section>
       <section class="projects">Suhrobbek</section>
-      <section class="team">Odina sister</section>
+      <section class="team">
+        <nav>
+          <h1 class="h1">OUR TEAM</h1>
+          <div class="picture">
+          <div class="img1">
+            <img src="./IMAGE (2).png" alt="">
+            <h2>Ron Swanson</h2>
+            <p>Founder</p>
+            <img src="./Frame (2).png" alt="">
+          </div>
+          <div class="img2">
+            <img src="./IMAGE (3).png" alt="">
+            <h2>Julia Depish</h2>
+            <p>Marketing</p>
+            <img src="./Frame (3).png" alt="">
+          </div>
+          <div class="img3">
+            <img src="./IMAGE (4).png" alt="">
+            <h2>Danny Devry</h2>
+            <p>Designer</p>
+            <img src="./Frame (4).png" alt="">
+          </div>
+          <div class="img4">
+            <img src="./IMAGE (5).png" alt="">
+            <h2>Lisa Smith</h2>
+            <p>Developer</p>
+            <img src="./Frame (5).png" alt="">
+          </div>
+        </div>
+        </nav>
+      </section>
       <section class="testimonial">Gulhayo sister</section>
       <section class="contact">Azimjon</section>
     </main>
