--- a/index.html
+++ b/index.html
@@ -15,17 +15,63 @@
 </head>
 <body>
   <div class="wrapper">
-    <header>Gulhayo sister</header>
+    <header>
+      <a href="#" class="logo">
+        <img src="IMAGE (1).png" alt="">
+        <span>Minimal</span>
+      </a>
+      <ul>
+        <li>
+          <a href="#">process</a>
+        </li>
+        <li>
+          <a href="#">projects</a>
+        </li>
+        <li>
+          <a href="#">team</a>
+        </li>
+        <li>
+          <a href="#">contact</a>
+        </li>
+      </ul>
+    </header>
     <main>
       <section class="main">Shomurod</section>
       <section class="about">Shomurod</section>
       <section class="brands">Odina sister</section>
       <section class="projects">Suhrobbek</section>
       <section class="team">Odina sister</section>
-      <section class="testimonial">Gulhayo sister</section>
+      <section class="testimonial">
+        <div class="anyone">
+          <p>“I love these guys! They did a great job. I would recommend them to anyone.”</p>
+          <a href="#">
+            <img src="IMAGE (2).png" alt="">
+          </a>
+          <span>Julius Von Uberstien</span>
+        </div>
+        <div class="minimal">
+          <p>“Elexis Corp. has grown immensely with the help of Minimal.”</p>
+          <a href="#">
+            <img src="IMAGE (3).png" alt="">
+          </a>
+          <span>Rachel Stamos</span>
+        </div>
+      </section>
       <section class="contact">Azimjon</section>
     </main>
-    <footer>Gulhayot sister</footer>
+    <footer>
+      <form>
+        <input class="input" type="text" name="text" id="name" placeholder="name">
+        <input class="input1" type="text" name="text" id="email" placeholder="email">
+        <input class="input" type="text" name="text" id="budget" placeholder="budget">
+        <textarea name="text" id="Describe youre project..." placeholder="Describe youre project..."></textarea>
+      </form>
+      <a href="#"> <button>Send Message</button></a>
+      <a href="#">
+        <img src="IMAGE (1).png" alt="">
+      </a>
+      <p>Minimal Template made in Webflow. All rights reserved.</p>
+    </footer>
   </div>
 </body>
 </html>
