contact section is done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,14 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- fontawesome cdn link -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <title>Minimal</title>
-  
+
 </head>
+
 <body>
   <div class="wrapper">
     <header>Gulhayo sister</header>
@@ -23,9 +27,58 @@
       <section class="projects">Suhrobbek</section>
       <section class="team">Odina sister</section>
       <section class="testimonial">Gulhayo sister</section>
-      <section class="contact">Azimjon</section>
+
+      <!-- contact section start -->
+      <section class="contact">
+        <h1>LET’s Get in touch</h1>
+
+        <div class="contact-container">
+          <div class="contact-content">
+            <img src="./images/location.png" alt="location">
+            <h3>MEET US IN PERSON</h3>
+            <p>8776 Juniper Street <br>Unit #204 <br>Merriweather, Ontorio <br>Canada</p>
+          </div>
+
+          <div class="contact-content">
+            <img src="./images/envelope.png" alt="envelope">
+            <h3>The traditional way</h3>
+            <p>Email us <br><a href="#">contact@minimal.com</a></p>
+            <p>Contact form <br>Scroll down</p>
+          </div>
+
+          <div class="contact-content">
+            <img src="./images/like.png" alt="like">
+            <h3>Let's get social</h3>
+            <ul>
+              <li>
+                <a href="#">
+                  <i class="fa-brands fa-square-facebook"></i>
+                  Facebook
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fa-brands fa-twitter"></i>
+                  Twitter
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fa-brands fa-linkedin-in"></i>
+                  Linkedin
+                </a>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+
+      </section>
+      <!-- contact section start -->
+
     </main>
     <footer>Gulhayot sister</footer>
   </div>
 </body>
+
 </html>
