projects section done

--- a/index.html
+++ b/index.html
@@ -1,31 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- custom css link -->
-  <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- custom css link -->
+    <link rel="stylesheet" href="style.css" />
 
-  <!-- fontawesome cdn link -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- fontawesome cdn link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-  <title>Minimal</title>
-  
-</head>
-<body>
-  <div class="wrapper">
-    <header>Gulhayo sister</header>
-    <main>
-      <section class="main">Shomurod</section>
-      <section class="about">Shomurod</section>
-      <section class="brands">Odina sister</section>
-      <section class="projects">Suhrobbek</section>
-      <section class="team">Odina sister</section>
-      <section class="testimonial">Gulhayo sister</section>
-      <section class="contact">Azimjon</section>
-    </main>
-    <footer>Gulhayot sister</footer>
-  </div>
-</body>
+    <title>Minimal</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>Gulhayo sister</header>
+      <main>
+        <section class="main">Shomurod</section>
+        <section class="about">Shomurod</section>
+        <section class="brands">Odina sister</section>
+
+        <!-- projects section start -->
+        <section class="projects">
+          <!-- img-one start -->
+          <div class="img-one">
+            <div class="box1">
+              <img src="images/img1.png" alt="" />
+              <div class="box11">
+                <h1>WOODS</h1>
+                <p>Photography</p>
+              </div>
+            </div>
+
+            <div class="box2">
+              <img src="images/img2.png" alt="" />
+              <div class="box22">
+                <h1>PATH</h1>
+                <p>Website • Photography</p>
+              </div>
+            </div>
+
+            <div class="box3">
+              <img src="images/img3.png" alt="" />
+              <div class="box33">
+                <h1>DARKNESS</h1>
+                <p>Website</p>
+              </div>
+            </div>
+          </div>
+          <!-- img-one end -->
+
+          <!-- img-two start -->
+          <div class="img-two">
+            <div class="box4">
+              <img src="images/img4.png" alt="" />
+              <div class="box44">
+                <h1>WAVES</h1>
+                <p>Photography</p>
+              </div>
+            </div>
+
+            <div class="box5">
+              <img src="images/img5.png" alt="" />
+              <div class="box55">
+                <h1>DROPS</h1>
+                <p>Website</p>
+              </div>
+            </div>
+
+            <div class="box6">
+              <img src="images/img6.png" alt="" />
+              <div class="box66">
+                <h1>OCEAN</h1>
+                <p>Website</p>
+              </div>
+            </div>
+          </div>
+          <!-- img-two end -->
+
+          <!-- img-three start -->
+          <div class="img-three">
+            <div class="box7">
+              <img src="images/img7.png" alt="" />
+              <div class="box77">
+                <h1>TOWN</h1>
+                <p>Website</p>
+              </div>
+            </div>
+
+            <div class="box8">
+              <img src="images/img8.png" alt="" />
+              <div class="box88">
+                <h1>MOUNTAIN</h1>
+                <p>Website</p>
+              </div>
+            </div>
+
+            <div class="box9">
+              <img src="images/img9.png" alt="" />
+              <div class="box99">
+                <h1>CAMERA</h1>
+                <p>Website</p>
+              </div>
+            </div>
+          </div>
+          <!-- img-three end -->
+        </section>
+        <!-- projects section end -->
+
+        <section class="team">Odina sister</section>
+        <section class="testimonial">Gulhayo sister</section>
+        <section class="contact">Azimjon</section>
+      </main>
+      <footer>Gulhayot sister</footer>
+    </div>
+  </body>
 </html>
